--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "express": "^5.1.0",
     "ws": "^8.18.3",
-    "cors":"^2.8.5"
+    "cors":"^2.8.5",
+    "uuid": "^9.0.1"
   }
 }
